bump some versions